--- a/app.css
+++ b/app.css
@@ -1,13 +1,12 @@
 #my-chart.column {
   height: 200px;
-  max-width: 300px;
+  max-width: 375px;
   margin: 0 auto;
 }
 
 #my-chart.column {
   --labels-size: 3rem;
 }
-
 #my-chart td {
-  background-color: brown;
+  border-radius: 10%;
 }
