--- a/app.css
+++ b/app.css
@@ -55,6 +55,21 @@ article {
   border-radius: 10%;
   cursor: pointer;
 }
+.tooltip {
+  visibility: hidden;
+  position: absolute;
+  z-index: 1;
+  height: 2rem;
+  width: 100px;
+  color: white;
+  font-size: 12px;
+  background-color: #192733;
+  border-radius: 10px;
+  padding: 10px 15px 10px 15px;
+  top: -40px;
+  left: -50%;
+}
+
 section {
   display: flex;
   flex-direction: row;
