--- a/app.css
+++ b/app.css
@@ -46,6 +46,7 @@ article {
 article h2 {
   color: hsl(25, 47%, 15%);
   margin: 0 0 2rem 0;
+  font-size: 1.3rem;
 }
 
 #my-chart.column {
@@ -60,6 +61,9 @@ article h2 {
 #my-chart td {
   border-radius: 10%;
   cursor: pointer;
+}
+th {
+  color: hsl(25, 47%, 15%);
 }
 td:hover {
   opacity: 50%;
